2021/fundamental/k8s/cka/demo/ingress/ingress-wear-wath_subdomain.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metatdata:
  name: ingress-wear-watch_subdomain
spec:
  rules:
    - host: wear.my-online-store.com
      http:
        paths:
          - backend:
              serviceName: wear-service
              servicePort: 80
    - host: watch.my-oneline-store.com
      http:
        paths:
          - backend:
              serviceName: watch-service
              servicePort: 80
